--- a/notebooks/Speed_analyze.ipynb
+++ b/notebooks/Speed_analyze.ipynb
@@ -14,7 +14,7 @@
     "5. Train model ☑\n",
     "6. Test model ☑\n",
     "7. Export model ☑\n",
-    "8. Load and predict model"
+    "8. Load and predict model ☑"
    ]
   },
   {
@@ -2773,7 +2773,7 @@
        "      <td>0.0</td>\n",
        "      <td>255.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>3</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -2797,7 +2797,7 @@
        "      <td>0.0</td>\n",
        "      <td>255.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -2845,7 +2845,7 @@
        "      <td>0.0</td>\n",
        "      <td>255.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -2869,7 +2869,7 @@
        "      <td>0.0</td>\n",
        "      <td>255.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>3</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2899,11 +2899,11 @@
        "4        1.0      0.0      0.0      0.0      0.0      0.0           255.0   \n",
        "\n",
        "   PI_FEEDBACK  label  \n",
-       "0          0.0      3  \n",
-       "1          0.0      1  \n",
+       "0          0.0      1  \n",
+       "1          0.0      0  \n",
        "2          0.0      0  \n",
-       "3          0.0      1  \n",
-       "4          0.0      3  \n",
+       "3          0.0      0  \n",
+       "4          0.0      2  \n",
        "\n",
        "[5 rows x 72 columns]"
       ]
@@ -3263,10 +3263,10 @@
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       1.00      1.00      1.00        95\n",
-      "           1       1.00      1.00      1.00        95\n",
-      "           2       1.00      1.00      1.00        81\n",
-      "           3       1.00      1.00      1.00        81\n",
+      "           0       1.00      1.00      1.00        94\n",
+      "           1       1.00      1.00      1.00        88\n",
+      "           2       1.00      1.00      1.00        82\n",
+      "           3       1.00      1.00      1.00        88\n",
       "\n",
       "    accuracy                           1.00       352\n",
       "   macro avg       1.00      1.00      1.00       352\n",
@@ -3335,20 +3335,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "id": "a7806c71-f6b4-4ee1-a756-f17c729ff03f",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = df.iloc[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "id": "a8f1a4a7-c54d-49e0-ae55-7a638078cc31",
-   "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] 1\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -3356,41 +3353,63 @@
       "/home/gom/miniconda3/envs/dsenv/lib/python3.8/site-packages/sklearn/base.py:465: UserWarning: X does not have valid feature names, but LogisticRegression was fitted with feature names\n",
       "  warnings.warn(\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([3])"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "saved_model.predict([x])"
+    "# Predict input from dataframe\n",
+    "x = df.iloc[0]\n",
+    "print(saved_model.predict([x]), y[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "6ca57f00-9565-47c5-8a32-696984135ced",
+   "execution_count": 34,
+   "id": "7767bdc6-b820-439e-8a4e-088e3053cd45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sqlite3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "bb45061d-c4d4-40cb-b1ec-d36746492d4d",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "71\n",
+      "[3]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/gom/miniconda3/envs/dsenv/lib/python3.8/site-packages/sklearn/base.py:465: UserWarning: X does not have valid feature names, but LogisticRegression was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
     }
    ],
    "source": [
-    "y[0]"
+    "# Connect to database\n",
+    "DATABASE_PATH = '../data/inverter.db'\n",
+    "\n",
+    "conn = sqlite3.connect(DATABASE_PATH)\n",
+    "c = conn.cursor()\n",
+    "\n",
+    "query = \"\"\"SELECT * FROM sinamicv20 WHERE ID = 0\"\"\"\n",
+    "\n",
+    "c.execute(query)\n",
+    "conn.commit()\n",
+    "\n",
+    "x = c.fetchone()\n",
+    "x_drop_index = x[1:]\n",
+    "print(len(x_drop_index))\n",
+    "print(saved_model.predict([x_drop_index]))"
    ]
   }
  ],
