--- a/notebooks/speed_analysis.ipynb
+++ b/notebooks/speed_analysis.ipynb
@@ -5,7 +5,7 @@
    "id": "3d012b79-727a-47f2-b51f-6850891480e8",
    "metadata": {},
    "source": [
-    "# speed_analyze\n",
+    "## speed_analyze\n",
     "\n",
     "1. Import data ☑\n",
     "2. Remove null ☑\n",
@@ -22,7 +22,7 @@
    "id": "fa267c22-da44-4eb5-8a6f-dde8b9e8f9c9",
    "metadata": {},
    "source": [
-    "## Import data"
+    "### Import data"
    ]
   },
   {
@@ -250,7 +250,7 @@
     }
    ],
    "source": [
-    "df_stopped = pd.read_csv('../data/data.csv')\n",
+    "df_stopped = pd.read_csv('../assets/data/0hz.csv')\n",
     "df_stopped.head()"
    ]
   },
@@ -468,7 +468,7 @@
     }
    ],
    "source": [
-    "df_7hz = pd.read_csv('../data/data1.csv')\n",
+    "df_7hz = pd.read_csv('../assets/data/7hz.csv')\n",
     "df_7hz.head()"
    ]
   },
@@ -686,7 +686,7 @@
     }
    ],
    "source": [
-    "df_10hz = pd.read_csv('../data/data2.csv')\n",
+    "df_10hz = pd.read_csv('../assets/data/10hz.csv')\n",
     "df_10hz.head()"
    ]
   },
@@ -904,7 +904,7 @@
     }
    ],
    "source": [
-    "df_13hz = pd.read_csv('../data/data3.csv')\n",
+    "df_13hz = pd.read_csv('../assets/data/13hz.csv')\n",
     "df_13hz.head()"
    ]
   },
@@ -1198,7 +1198,7 @@
    "id": "96ea02b9-b9aa-4618-bb95-e24c760276af",
    "metadata": {},
    "source": [
-    "## Remove null, zero"
+    "### Remove null, zero"
    ]
   },
   {
@@ -1399,7 +1399,7 @@
    "id": "46c4c838-c74c-4941-9c42-570fea921151",
    "metadata": {},
    "source": [
-    "## Add labels"
+    "### Add labels"
    ]
   },
   {
@@ -2279,7 +2279,7 @@
    "id": "d599b2a3-69c8-44d1-b03f-7d8b330bd419",
    "metadata": {},
    "source": [
-    "## ETL"
+    "### ETL"
    ]
   },
   {
@@ -3164,7 +3164,7 @@
    "id": "a24be85c-85d9-4d0d-bf54-dd29cfaeedc9",
    "metadata": {},
    "source": [
-    "## Train model"
+    "### Train model"
    ]
   },
   {
@@ -3246,7 +3246,7 @@
    "id": "fe3f6786-7cc7-4db1-b51b-05efe8fea56f",
    "metadata": {},
    "source": [
-    "## Test model"
+    "### Test model"
    ]
   },
   {
@@ -3289,7 +3289,7 @@
    "id": "eb63cf4d-770b-4a8f-bfe5-bd9430fc4a6b",
    "metadata": {},
    "source": [
-    "## Export model"
+    "### Export model"
    ]
   },
   {
@@ -3320,7 +3320,7 @@
    "id": "b1662edb-8d9b-4366-aaac-fd678193d73a",
    "metadata": {},
    "source": [
-    "# Load and predict model"
+    "### Load and predict model"
    ]
   },
   {
@@ -3396,7 +3396,7 @@
    ],
    "source": [
     "# Connect to database\n",
-    "DATABASE_PATH = '../data/inverter.db'\n",
+    "DATABASE_PATH = '../data/db.db'\n",
     "\n",
     "conn = sqlite3.connect(DATABASE_PATH)\n",
     "c = conn.cursor()\n",
